# lib_qscintilla

./: .gitignore  CMakeLists.txt  README.md
Python/: CMakeLists.txt  configure.py  pyproject-qt5.toml.cmakein
cmake/: FindAnyProject.cmake  FindExtPyQt4.cmake  FindExtPyQt5.cmake  FindPyQt5.cmake  FindPyQt5.py  PackageConfig.cmake.in  QsciPackageConfig.cmake.in  SIPMacros.cmake  configure.py.in  mac_rpath_fix.py  util.cmake
doc/: README.doc
opt/: folders.csv
qt/: CMakeLists.txt  InputMethod.cpp  qsciscintillabase.cpp
qt/Qsci/: qsciscintillabase.h
translate/: CMakeLists.txt
